# md2lang-oai

./: CHANGELOG.md  README.md  pyproject.toml
examples/: README.md  dnd_instructions.txt  dnd_sample.md
src/md2lang_oai/: cli.py
tests/: test_version.py
