[project]
name = "md2lang-oai"
version = "0.1.0"
description = "Minimal CLI to translate Markdown/text to a target locale via an OpenAI-compatible Chat Completions endpoint."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["markdown", "translation", "cli", "openai", "httpx"]
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
]

[project.urls]
Repository = ""

[project.scripts]
md2lang-oai = "md2lang_oai.cli:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/md2lang_oai"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[dependency-groups]
dev = [
  "pytest>=8.0",
]
